# tombh_twitch_bot

./: .gitignore  Cargo.toml  README.md  config.toml  env.default
crates/bot/: Cargo.toml
crates/bot/src/: bot.rs  commands.rs  database.rs  main.rs  websocket.rs
crates/tattoy-plugin/: Cargo.toml  README.md  cargo_run.sh
crates/tattoy-plugin/src/: lib.rs  main.rs  renderer.rs  utils.rs
docs/: SOUNDS.md  commands.md
migrations/: 20250318183528_init.sql  20250319182416_messages.sql
src/: commands.rs  database.rs  main.rs  websocket.rs
