[package]
name = "tbhbot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
reqwest = "0.12.12"
serde = "1.0.217"
serde_derive = "1.0.217"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitch_api = { version = "0.7.0", features = ["eventsub", "helix", "reqwest"] }
futures = "0.3.31"
twitch_oauth2 = { version = "0.15.2", features = ["client"]}
url = "2.5.4"
chrono = "0.4.40"

